refactor : 모든코드에 주석추가